ipc/ipdl/test/ipdl/ok/PUniquePtrBasic.ipdl
protocol PUniquePtrBasic {
child:
    async Msg(UniquePtr<int> maybe);
};
