ipc/ipdl/test/ipdl/error/PBadUniquePtrBase.ipdl
//error: argument typename `UndeclaredType' of message `Test' has not been declared

protocol PBadUniquePtrBase {
child:
  async Test(UniquePtr<UndeclaredType> x);
  async __delete__();
};
